--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <h1>git hub</h1>
+    <div class="main_holder">
+    <div class="card">
+        <h1>main text</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorem sapiente harum, aliquam minus quae!</p>
+        <form action=""><button>about</button></form>
+    </div>
+    <div class="card">
+        <h1>main text</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorem sapiente harum, aliquam minus quae!</p>
+        <form action=""><button>about</button></form>
+    </div>
+    <div class="card">
+        <h1>main text</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorem sapiente harum, aliquam minus quae!</p>
+        <form action=""><button>about</button></form>
+    </div>
+</div>
 </body>
 </html>
