--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-    <h1>git hub</h1>
+    <h1 class="git">git hub</h1>
     <div class="main_holder">
     <div class="card">
         <h1>main text</h1>
@@ -25,6 +25,9 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorem sapiente harum, aliquam minus quae!</p>
         <form action=""><button>about</button></form>
     </div>
+</div>
+<div class="h1">
+    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit iure aut aperiam, officia esse nulla obcaecati. Est sequi harum eaque deleniti consequuntur? Ab dolore a aperiam dolorum odit laboriosam nesciunt at alias nemo expedita accusamus voluptate quod deleniti asperiores omnis quasi excepturi assumenda recusandae, officia dignissimos aut, placeat dicta labore. Excepturi nostrum quo maxime sed eaque culpa odit quibusdam accusamus cum sapiente minus in natus magnam, esse numquam qui, labore debitis mollitia! Alias, enim nihil, voluptatum corrupti ex exercitationem fugit perspiciatis optio reprehenderit ipsum id provident quos nisi commodi voluptatibus placeat mollitia recusandae voluptates eos unde quia quaerat odit est illo! Quo ullam accusamus, enim ut placeat quam facere magni velit nam, eos molestias recusandae inventore soluta, porro deserunt ab autem architecto repellendus libero amet fuga nemo? Minima omnis, tempore quia praesentium numquam dolorum quibusdam? Consequuntur, doloremque! Nam et reiciendis alias. Quas accusantium labore ab cupiditate, eveniet minus voluptate esse suscipit iusto optio. Placeat ut corporis praesentium iure enim, tempore totam inventore nihil velit minus fugiat aliquam et accusamus ratione itaque assumenda sequi dolore quibusdam dolorum. Eligendi, placeat! Tempora nam quidem ducimus? Tempora vitae repudiandae iusto maiores modi amet atque, totam dolorum voluptas a dolorem laudantium reprehenderit minus earum placeat? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam perspiciatis, maiores tenetur, ab ad consequatur nisi eaque facere cupiditate adipisci, autem totam minus aliquam. Necessitatibus cumque rem ullam? Omnis eaque maiores fuga culpa cupiditate obcaecati minima iste earum eveniet reprehenderit modi consequatur iusto, unde aliquid temporibus non velit illo nobis esse corporis dignissimos. Obcaecati fugit cum dolores cupiditate, ipsam voluptatem at hic quae vel pariatur repudiandae porro dolore, odit ut libero magni expedita, dicta praesentium nulla rem ipsum aspernatur similique totam ullam! Incidunt, assumenda temporibus ipsa, ut placeat aliquid dolorem quisquam consequuntur minima nesciunt, libero dignissimos? Minus voluptates vel recusandae reiciendis fuga nam, mollitia a facere nulla veniam voluptatibus ex quasi dolorum impedit! Atque molestias autem vel esse ipsum adipisci voluptates nam iusto doloribus provident! Nisi ad ipsam animi itaque ullam illo maiores recusandae facilis vitae expedita atque quae veniam quos inventore, dolore beatae consectetur hic tempora, magnam labore eaque neque quas. Accusantium provident hic eveniet ducimus error mollitia eius reiciendis, velit perspiciatis tempore veritatis atque quidem, illo voluptate doloribus? Reprehenderit, repellat voluptas eum ut ab cupiditate. Possimus expedita fuga inventore eius dolor, qui vitae exercitationem nostrum animi voluptas impedit maxime molestias. Adipisci officia reiciendis laudantium vero laboriosam iusto sunt!</h1>
 </div>
 </body>
 </html>
